--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.interordi</groupId>
   <artifactId>IORace</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
   <name>IORace</name>
   <description>Bukkit plugin, runs the Race Away challenge</description>
   <properties>
